Time: 8 ms (73.89%) | Memory: 65.5 MB (21.35%) - LeetSync