@@ -2,30 +2,32 @@ class Solution {
     List<List<String>> ans = new ArrayList<>();
 
     public List<List<String>> partition(String s) {
-        List<String> temp = new ArrayList<>();
-        solve(s, 0, temp);
+        helper(s, 0, new ArrayList<String>());
         return ans;
     }
 
-    public void solve(String s,int idx, List<String> temp){
-        if(idx == s.length()){
-            ans.add(new ArrayList<>(temp));
+    public void helper(String s, int idx, List<String> curr) {
+        if (idx == s.length()) {
+            ans.add(new ArrayList<>(curr));
             return;
         }
-        for(int i = idx; i < s.length(); i++){
-            if(isPalindrome(s, idx, i)){
-                temp.add(s.substring(idx,i+1));
-                solve(s, i + 1, temp);
-                temp.remove(temp.size() - 1);
+
+        for (int i = idx; i < s.length(); i++) {
+            if (isPalindrome(s, idx, i)) {
+                curr.add(s.substring(idx, i + 1));
+                helper(s, i + 1, curr);
+                curr.removeLast();
             }
         }
     }
 
-    public boolean isPalindrome(String s, int start, int end){
-        while(start < end){
-            if(s.charAt(start) != s.charAt(end)) return false;
-            start++;
-            end--;
+    public boolean isPalindrome(String s, int left, int right) {
+        while (left < right) {
+            if (s.charAt(left) != s.charAt(right))
+                return false;
+
+            left++;
+            right--;
         }
         return true;
     }
